<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_category" />

    </group>

    <group>
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_order" />

    </group>

    <group>
        <item
            android:id="@+id/nav_shipper"
            android:icon="@drawable/ic_baseline_local_shipping_24"
            android:title="@string/menu_shipper" />

    </group>

    <group>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_sign_out" />

    </group>
</menu>
